SDK-329 SDK-330 Revised error handling in http sender to better using standard mechanism SDK-337 #comment Added simple connection test using nJAMS HEAD method on ingest service if supported